fixed song covers

--- a/src/components/Playlists/Playlists.module.css
+++ b/src/components/Playlists/Playlists.module.css
@@ -19,7 +19,7 @@
   font-size: 1.1em;
 }
 
-.playlist:hover {
+.info:hover {
   cursor: pointer;
   color: var(--highlight);
 }
