--- a/src/components/RecentSongs/RecentSongs.module.css
+++ b/src/components/RecentSongs/RecentSongs.module.css
@@ -19,7 +19,7 @@
   font-size: 1.1em;
 }
 
-.track:hover {
+.info:hover {
   cursor: pointer;
   color: var(--highlight);
 }
