--- a/src/components/TopSongs/TopSongs.module.css
+++ b/src/components/TopSongs/TopSongs.module.css
@@ -20,7 +20,7 @@
   font-size: 1.1em;
 }
 
-.track:hover {
+.info:hover {
   cursor: pointer;
   color: var(--highlight);
 }
